[package]
name = "fft2osc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.3"
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
env_logger = "0.11.3"
log = "0.4.21"
egui = "0.27.2"
serde = { version = "1.0.200", features = ["derive"] }
spectrum-analyzer = "1.5.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-osc = "0.2.0"
